# neurohub-platform

./: .gitignore  CLAUDE.md  README.md  package.json  test-api.sh
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
apps/api/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  metrics.py  reconciler.py
apps/api/app/middleware/: logging.py  rate_limit.py  scope_check.py  timeout.py
apps/api/migrations/: env.py
apps/api/neurohub_sdk/: __init__.py  context.py  entrypoint.py  example_inference.py
apps/api/scripts/: Services_Metadata.json  seed_dev.py  seed_dicom_studies.py  seed_services.py  seed_techniques.py  technical_metadata.json  test_e2e_sub001.py
apps/api/tests/: conftest.py  test_api_key_scopes.py  test_auto_cancel.py  test_batch.py  test_bids_converter.py  test_container_runner.py  test_container_runner_rigorous.py  test_exceptions.py  test_expert_review.py  test_fusion_engine.py  test_gemini_agent.py  test_health.py  test_indexes.py  test_integration.py  test_logging.py  test_metrics.py  test_patient_access.py  test_pipeline_orchestrator.py  test_pipeline_status.py  test_pre_qc.py  test_rate_limit.py  test_reconciler.py  test_report_generation.py  test_requests.py  test_rls.py  test_service_deployment.py  test_service_technique_weights.py  test_state_machine.py  test_technique_execution_api.py  test_technique_module.py  test_technique_orchestrator.py  test_technique_output.py  test_techniques_api.py  test_uploads.py  test_virus_scan.py  test_webhooks.py  test_zip_processor.py
(+331 files in other folders)
